_id필드를 이용하기

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,16 +13,14 @@
   <body>
     <div class="container mt-5">
       <h2 class="text-center mb-4">할 일 목록</h2>
-      <form class="form-inline mb-4">
+      <form class="form-inline mb-4" onsubmit="handleSubmit(event)">
         <input
           id="todo-val"
           type="text"
           class="form-control mr-2 w-50"
           placeholder="새 할 일"
         />
-        <button type="button" class="btn btn-primary" id="addTodoButton">
-          할 일 추가
-        </button>
+        <button type="submit" class="btn btn-primary">할 일 추가</button>
       </form>
       <ul id="todo-list" class="list-group"></ul>
     </div>
@@ -33,6 +31,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="static/js/script.js"></script>
+    <script src="static/css/style.css"></script>
   </body>
 </html>
