--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,25 @@
 .btn-warning {
   color: white;
 }
+.form-inline .btn-primary {
+  margin-right: 10px; /* 버튼 간격 조정 */
+  background-color: #007bff; /* 업데이트 버튼 배경색 */
+  border-color: #007bff; /* 업데이트 버튼 테두리 색 */
+  color: #fff; /* 업데이트 버튼 텍스트 색상 */
+}
+
+.form-inline .btn-primary:hover {
+  background-color: #0056b3; /* 마우스 오버시 배경색 변경 */
+  border-color: #0056b3; /* 마우스 오버시 테두리 색 변경 */
+}
+
+.form-inline .btn-secondary {
+  background-color: #6c757d; /* 취소 버튼 배경색 */
+  border-color: #6c757d; /* 취소 버튼 테두리 색 */
+  color: #fff; /* 취소 버튼 텍스트 색상 */
+}
+
+.form-inline .btn-secondary:hover {
+  background-color: #5a6268; /* 마우스 오버시 배경색 변경 */
+  border-color: #545b62; /* 마우스 오버시 테두리 색 변경 */
+}
