--- a/templates/register.html
+++ b/templates/register.html
@@ -3,20 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>로그인</title>
+    <title>회원가입</title>
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/style.css') }}"
-    />
+    <link rel="stylesheet" href="/static/css/style.css" />
   </head>
   <body>
     <div class="container mt-5">
-      <h2 class="text-center">로그인</h2>
-      <form id="login-form" class="mt-4">
+      <h2 class="text-center">회원가입</h2>
+      <form id="register-form" class="mt-4">
         <div class="form-group">
           <label for="username">사용자명</label>
           <input
@@ -35,13 +32,24 @@
             placeholder="비밀번호 입력"
           />
         </div>
-        <button type="submit" class="btn btn-primary btn-block">로그인</button>
-        <div class="mt-3">
-          <a href="/register">회원가입</a>
+        <div class="form-group">
+          <label for="password-confirm">비밀번호 확인</label>
+          <input
+            type="password"
+            class="form-control"
+            id="password-confirm"
+            placeholder="비밀번호 확인"
+          />
         </div>
+        <button type="submit" class="btn btn-success btn-block">
+          회원가입
+        </button>
       </form>
     </div>
+
+    <!-- jQuery 라이브러리 추가 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- 사용자 스크립트 파일 참조 -->
     <script src="/static/js/script.js"></script>
   </body>
 </html>
