--- a/templates/index.html
+++ b/templates/index.html
@@ -18,12 +18,12 @@
       <h2 class="text-center">로그인</h2>
       <form id="login-form" class="mt-4">
         <div class="form-group">
-          <label for="username">사용자명</label>
+          <label for="userid">사용자 ID</label>
           <input
             type="text"
             class="form-control"
-            id="username"
-            placeholder="사용자명 입력"
+            id="userid"
+            placeholder="사용자 ID 입력"
           />
         </div>
         <div class="form-group">
